REGRESSION (r73385): Marquee with behavior="alternate" is not working https://bugs.webkit.org/show_bug.cgi?id=64230

Patch by Parag Radke <nrqv63@motorola.com> on 2012-01-24
Reviewed by Simon Fraser.

Source/WebCore:

This patch gives correct content width for marquee, which computes
correct start position to scroll marquee.

Test: fast/html/marquee-alternate.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):
We need(style()->marqueeBehavior() != MALTERNATE) check as we always need the marquee's
actual content width to compute the initial/end position in case of 'MALTERNATE'.
So we need to calculate the logical width in Alternate case even if fixed width is specified
as content has to animate between renderBox().right().x() - contentWidth() and
renderBox().left().x() + contentWidth().

* rendering/RenderMarquee.cpp:
(WebCore::RenderMarquee::computePosition):
Using PreferredLogicalWidth in place of LayoutOverflow for calculating correct content width.

LayoutTests:

Added a test case to check marquee alternate behavior with fixed width.

* fast/html/marquee-alternate-expected.txt: Added.
* fast/html/marquee-alternate.html: Added.

Canonical link: https://commits.webkit.org/93801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105772 268f45cc-cd09-0410-ab3c-d52691b4dbfc